--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,11 @@ name = "vm-worker"
 version = "0.1.0"
 description = "GCP Pub/Sub handler with FastAPI"
 dependencies = [
+    "fastapi>=0.115.12",
     "google-auth>=2.40.1",
     "google-cloud-compute>=1.30.0",
     "google-cloud-pubsub>=2.29.0",
     "structlog>=25.3.0",
+    "uvicorn>=0.34.2",
 ]
 requires-python = ">=3.10"
