Remove automatic trigger for Pub/Sub setup workflow, enabling manual execution only

--- a/.github/workflows/setuppubsub.yaml
+++ b/.github/workflows/setuppubsub.yaml
@@ -1,9 +1,7 @@
 name: Setup Pub/Sub Push with DLQ
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:  # Manual trigger
 
 jobs:
   setup:
