--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "GCP Pub/Sub handler with FastAPI"
 dependencies = [
     "fastapi>=0.115.12",
+    "google-api-python-client>=2.170.0",
     "google-auth>=2.40.1",
     "google-cloud-compute>=1.30.0",
     "google-cloud-pubsub>=2.29.0",
