--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 description = "GCP Pub/Sub handler with FastAPI"
 dependencies = [
     "fastapi>=0.115.12",
-    "google-api-python-client>=2.170.0",
     "google-auth>=2.40.1",
     "google-cloud-compute>=1.30.0",
+    "google-cloud-container>=2.56.1",
     "google-cloud-pubsub>=2.29.0",
     "structlog>=25.3.0",
     "uvicorn>=0.34.2",
