--- a/.github/workflows/deploy-firestore.yaml
+++ b/.github/workflows/deploy-firestore.yaml
@@ -10,12 +10,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up gcloud CLI
-        uses: google-github-actions/setup-gcloud@v1
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: extended-web-339507
-          export_default_credentials: true
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
 
       - name: Enable Firestore API
         run: |
