--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "google-auth>=2.40.1",
     "google-cloud-compute>=1.30.0",
     "google-cloud-container>=2.56.1",
+    "google-cloud-firestore>=2.20.2",
     "google-cloud-pubsub>=2.29.0",
     "structlog>=25.3.0",
     "uvicorn>=0.34.2",
