--- a/.github/workflows/deploycloudrun.yaml
+++ b/.github/workflows/deploycloudrun.yaml
@@ -40,3 +40,9 @@ jobs:
           --max-instances=2 \
           --min-instances=1 \
           --quiet
+
+
+gcloud projects add-iam-policy-binding extended-web-339507 \
+  --member="serviceAccount:svc-compute@extended-web-339507.iam.gserviceaccount.com" \
+  --role="roles/datastore.user"
+
