--- a/.github/workflows/builddocker.yaml
+++ b/.github/workflows/builddocker.yaml
@@ -1,36 +1,43 @@
 name: Build and Push Docker Image to Google Artifact Registry
 
 on:
-  workflow_dispatch:  # <-- enables manual trigger from GitHub UI
+  workflow_dispatch:
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
+    env:
+      PROJECT_ID: smooth-command-462303-n7     # <--- Your GCP Project ID here
+      REGION: us-central1                 # <--- Your Artifact Registry region
+      REPOSITORY: test-repo
+      IMAGE_NAME: compute-worker
+      IMAGE_TAG: latest
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Authenticate to Google Cloud
-      uses: google-github-actions/auth@v2
-      with:
-        credentials_json: '${{ secrets.GCP_SA_KEY }}'
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: '${{ secrets.GCP_BOOTSTRAP_SA_KEY }}'
 
-    - name: Configure Docker to use gcloud as a credential helper
-      run: |
-        gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+      - name: Configure Docker to use gcloud as a credential helper
+        run: |
+          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
-    - name: Build Docker image
-      run: |
-        docker build -t pubsub-fastapi .
+      - name: Build Docker image
+        run: |
+          docker build -t pubsub-fastapi .
 
-    - name: Tag Docker image for Artifact Registry
-      run: |
-        docker tag pubsub-fastapi us-central1-docker.pkg.dev/extended-web-339507/test-repo/compute-worker:latest
+      - name: Tag Docker image for Artifact Registry
+        run: |
+          docker tag pubsub-fastapi ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
-    - name: Push image to Artifact Registry
-      run: |
-        docker push us-central1-docker.pkg.dev/extended-web-339507/test-repo/compute-worker:latest
+      - name: Push image to Artifact Registry
+        run: |
+          docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
