--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "google-cloud-firestore>=2.20.2",
     "google-cloud-pubsub>=2.29.0",
     "protobuf>=5.29.4",
+    "pytz>=2025.2",
     "structlog>=25.3.0",
     "uvicorn>=0.34.2",
 ]
